Fix pin-button vertical alignment
Changes in https://gerrit.wikimedia.org/r/#/c/322114 did mess with
the vertical alignment of the pin-button.

--- a/modules/ext.RevisionSlider.css
+++ b/modules/ext.RevisionSlider.css
@@ -194,7 +194,7 @@ of the frameless one (to fit the size of the toggle button */
 	height: 1.775em;
 	background-color: transparent;
 	border: 0;
-	margin-top: 0.06em;
+	margin-top: 0.12em;
 }
 
 .mw-revslider-auto-expand-button.oo-ui-iconElement > .oo-ui-buttonElement-button > .oo-ui-iconElement-icon {
